--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css",
               "node_modules/roboto-fontface/css/roboto/roboto-fontface.css"
             ],
@@ -121,6 +122,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "kgt-angular"
 }
