--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
       "es2018",
       "dom"
     ],
-    "paths:": {
+    "paths": {
       "@app/*": ["src/app/*"],
       "@environments/*": ["src/environments/*"],
       "@shared/*": ["src/app/shared/*"]
