--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/free-regular-svg-icons": "^5.12.0",
     "hammerjs": "^2.0.8",
     "roboto-fontface": "^0.10.0",
     "rxjs": "~6.4.0",
