--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/free-regular-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@ngrx/store": "^10.1.2",
     "hammerjs": "^2.0.8",
     "roboto-fontface": "^0.10.0",
     "rxjs": "~6.4.0",
