--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-regular-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@ngrx/effects": "^10.1.2",
     "@ngrx/store": "^10.1.2",
+    "@ngrx/store-devtools": "^10.1.2",
     "hammerjs": "^2.0.8",
     "roboto-fontface": "^0.10.0",
     "rxjs": "~6.4.0",
