add packages required in angular 9, update material

--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.13",
-    "@angular/cdk": "~8.2.3",
+    "@angular/cdk": "~9.2.4",
     "@angular/common": "~9.1.13",
     "@angular/compiler": "~9.1.13",
     "@angular/core": "~9.1.13",
     "@angular/forms": "~9.1.13",
-    "@angular/material": "^8.2.3",
+    "@angular/localize": "^9.1.13",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
@@ -29,7 +30,6 @@
     "@ngrx/effects": "^10.1.2",
     "@ngrx/store": "^10.1.2",
     "@ngrx/store-devtools": "^10.1.2",
-    "hammerjs": "^2.0.8",
     "roboto-fontface": "^0.10.0",
     "rxjs": "~6.6.3",
     "tslib": "^1.10.0",
